unpackaged/main/default/objects/WorkIt2__Session_Type__c/WorkIt2__Session_Type__c.object-meta.xml
<CustomObject>
    <description>Identifies an activity in a user’s work process.</description>
    <label>Session Type</label>
    <nameField>
        <label>Session Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Session Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>