unpackaged/main/default/objects/WorkIt2__Session_Type__c/fields/WorkIt2__Active__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>