unpackaged/main/default/objects/WorkIt2__Session_Type__c/fields/WorkIt2__Contexts__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Contexts__c</fullName>
    <label>Contexts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EDIT</fullName>
            </value>
            <value>
                <fullName>DFLT</fullName>
            </value>
            <value>
                <fullName>TASK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>