unpackaged/main/default/objects/WorkIt2__Session_Type__c/fields/WorkIt2__Group__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>