unpackaged/main/default/objects/WorkIt2__Session_Type__c/fields/WorkIt2__Objects__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Objects__c</fullName>
    <label>Objects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>500/Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>