unpackaged/main/default/objects/WorkIt2__Session_Type__c/fields/WorkIt2__Priority__c.field-meta.xml
<CustomField>
    <fullName>WorkIt2__Priority__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>