unpackaged/main/default/objects/WorkIt2__Session_Type__c/listViews/WorkIt2__All.listView-meta.xml
<ListView>
    <fullName>WorkIt2__All</fullName>
    <columns>NAME</columns>
    <columns>WorkIt2__Contexts__c</columns>
    <columns>WorkIt2__Objects__c</columns>
    <columns>WorkIt2__Group__c</columns>
    <columns>WorkIt2__Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>